--- a/stock.html
+++ b/stock.html
@@ -451,6 +451,7 @@ document.addEventListener("DOMContentLoaded", async () => {
     });
 
 async function subirProductos(productos) {
+  document.getElementById("loader").style.display = "block"; // mostrar spinner
   // limpiar listas antes de volver a llenarlas
   document.getElementById("listaStock").innerHTML = "";
   document.getElementById("listaAgotados").innerHTML = "";
@@ -524,10 +525,12 @@ async function subirProductos(productos) {
 
   // recién ahora refrescar
   await refrescarLista();
+  document.getElementById("loader").style.display = "none"; // ocultar spinner
   alert("Carga de productos finalizada");
 }
 // 🔹 Actualizar stock (suma cantidades)
 async function actualizarStock(productos) {
+  document.getElementById("loader").style.display = "block"; // mostrar spinner
   for (const prod of productos) {
     try {
       const q = query(collection(db, "productos"), where("claveUnica", "==", prod.claveUnica));
@@ -578,6 +581,7 @@ const docRef = await addDoc(collection(db, "productos"), {
     }
   }
   await refrescarLista();
+  document.getElementById("loader").style.display = "none"; // ocultar spinner
   alert("Stock actualizado");
   productosParseados = [];
 document.getElementById("acciones").style.display = "none";
@@ -585,6 +589,7 @@ document.getElementById("acciones").style.display = "none";
 
 // 🔹 Subir stock (pisar todo)
 async function subirStock(productos) {
+  document.getElementById("loader").style.display = "block"; // mostrar spinner
   for (const prod of productos) {
     try {
       const q = query(collection(db, "productos"), where("claveUnica", "==", prod.claveUnica));
@@ -639,6 +644,7 @@ const docRef = await addDoc(collection(db, "productos"), {
     }
   }
   await refrescarLista();
+  document.getElementById("loader").style.display = "none"; // ocultar spinner
   alert("Productos re-subidos (pisados)");
   productosParseados = [];
 document.getElementById("acciones").style.display = "none";
@@ -721,5 +727,26 @@ async function obtenerNuevoOrden(db) {
   return nuevoOrden; // si no hay huecos, devuelve el siguiente consecutivo
 }
 </script>
+
+<!-- Spinner de carga -->
+<div id="loader" style="display:none; text-align:center; margin-top:20px;">
+  <div class="spinner" style="
+    border: 4px solid #ddd;
+    border-top: 4px solid #007bff;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    animation: spin 1s linear infinite;
+    margin: auto;">
+  </div>
+  <p>Cargando...</p>
+</div>
+
+<style>
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+</style>
 </body>
 </html>
