--- a/stock.html
+++ b/stock.html
@@ -725,8 +725,13 @@ async function obtenerNuevoOrden(db) {
   }
   return nuevoOrden; // si no hay huecos, devuelve el siguiente consecutivo
 }
+setInterval(() => {
+  const dots = document.getElementById("dots");
+  if (dots) {
+    dots.textContent = dots.textContent.length < 3 ? dots.textContent + "." : "";
+  }
+}, 500);
 </script>
-<!-- Overlay de carga -->
 <div id="overlay" style="
   display:none;
   position:fixed;
@@ -737,7 +742,27 @@ async function obtenerNuevoOrden(db) {
   text-align:center;
   padding-top:20%;
   z-index:9999;">
-  Procesando productos...
+  
+  <!-- Spinner -->
+  <div class="spinner" style="
+    border: 6px solid #ddd;
+    border-top: 6px solid #00ffcc;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    margin:auto;
+    animation: spin 1s linear infinite;">
+  </div>
+  
+  <!-- Texto -->
+  <p id="overlayText">Procesando productos<span id="dots">...</span></p>
 </div>
+
+<style>
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+</style>
 </body>
 </html>
