--- a/clientes.html
+++ b/clientes.html
@@ -53,6 +53,14 @@
       margin-bottom: 10px;
       box-shadow: 2px 2px 5px rgba(0,0,0,0.1);
     }
+    .btn-danger {
+      background:#d9534f;
+      color:white;
+      padding:10px;
+      border:none;
+      border-radius:5px;
+      cursor:pointer;
+    }
   </style>
 </head>
 <body>
@@ -68,8 +76,25 @@
 
   <!-- Pestañas -->
   <div class="tabs">
-    <button class="active" onclick="mostrarTab('clientes')">Clientes</button>
+    <button onclick="mostrarTab('clientes')">Clientes</button>
     <button onclick="mostrarTab('ventas')">Ventas Cerradas</button>
+    <button onclick="mostrarTab('eliminar')">Eliminar Cliente/Venta</button>
+  </div>
+
+  <!-- Pestaña Eliminar -->
+  <div id="eliminar" class="tab-content" style="display:none;">
+    <h3>Eliminar Cliente o Venta</h3>
+    <!-- Buscar -->
+    <input type="text" id="buscadorEliminar" placeholder="Buscar por nombre o código">
+    <button onclick="buscarParaEliminar()">Buscar</button>
+    <div id="resultadoEliminar"></div>
+
+    <hr>
+
+    <!-- Eliminar directo por ID -->
+    <h4>Eliminar Cliente por ID</h4>
+    <input type="text" id="clienteIdEliminar" placeholder="ID del cliente">
+    <button id="btnEliminarCliente" class="btn-danger">Eliminar Cliente</button>
   </div>
 
   <!-- Contenido de pestañas -->
@@ -93,12 +118,94 @@
     function mostrarTab(tab) {
       document.getElementById("tabClientes").style.display = (tab === "clientes") ? "block" : "none";
       document.getElementById("tabVentas").style.display = (tab === "ventas") ? "block" : "none";
+      document.getElementById("eliminar").style.display = (tab === "eliminar") ? "block" : "none";
 
       const buttons = document.querySelectorAll(".tabs button");
       buttons.forEach(btn => btn.classList.remove("active"));
       if (tab === "clientes") buttons[0].classList.add("active");
-      else buttons[1].classList.add("active");
+      else if (tab === "ventas") buttons[1].classList.add("active");
+      else if (tab === "eliminar") buttons[2].classList.add("active");
     }
+
+    async function buscarParaEliminar() {
+      const termino = document.getElementById("buscadorEliminar").value.toLowerCase();
+      const resultadoDiv = document.getElementById("resultadoEliminar");
+      resultadoDiv.innerHTML = "";
+
+      const clientesSnap = await getDocs(collection(db, "clientes"));
+      clientesSnap.forEach(docSnap => {
+        const data = docSnap.data();
+        if (data.nombre.toLowerCase().includes(termino) || (data.codigo?.toLowerCase().includes(termino))) {
+          resultadoDiv.innerHTML += `
+            <div>
+              Cliente: ${data.nombre} - Tel: ${data.telefono}
+              <button onclick="pedirCredenciales('${docSnap.id}', 'clientes')">Eliminar</button>
+            </div>`;
+        }
+      });
+
+      const ventasSnap = await getDocs(collection(db, "ventasCerradas"));
+      ventasSnap.forEach(docSnap => {
+        const data = docSnap.data();
+        if (data.codigo?.toLowerCase().includes(termino)) {
+          resultadoDiv.innerHTML += `
+            <div>
+              Venta ${data.codigo} - Total: $${data.total}
+              <button onclick="pedirCredenciales('${docSnap.id}', 'ventasCerradas')">Eliminar</button>
+            </div>`;
+        }
+      });
+    }
+
+    let itemAEliminar = null;
+    let coleccionAEliminar = null;
+
+    window.pedirCredenciales = function(id, coleccion) {
+      itemAEliminar = id;
+      coleccionAEliminar = coleccion;
+      document.getElementById("modalCredenciales").style.display = "block";
+    };
+
+    document.getElementById("btnConfirmarEliminar").addEventListener("click", async () => {
+      const usuario = document.getElementById("usuarioCheck").value;
+      const password = document.getElementById("passwordCheck").value;
+
+      const credSnap = await getDocs(collection(db, "adminCredenciales"));
+      let valido = false;
+      credSnap.forEach(docSnap => {
+        const data = docSnap.data();
+        if (data.usuario === usuario && data.password === password) {
+          valido = true;
+        }
+      });
+
+      if (valido) {
+        await deleteDoc(doc(db, coleccionAEliminar, itemAEliminar));
+        alert("Eliminado correctamente");
+        document.getElementById("modalCredenciales").style.display = "none";
+        location.reload();
+      } else {
+        alert("Usuario o contraseña incorrectos");
+      }
+    });
+
+    // Nuevo botón de eliminar directo por ID
+    document.getElementById("btnEliminarCliente").addEventListener("click", async () => {
+      const clienteId = document.getElementById("clienteIdEliminar").value.trim();
+      if (!clienteId) {
+        alert("Ingresá un ID de cliente válido");
+        return;
+      }
+      try {
+        await deleteDoc(doc(db, "clientes", clienteId));
+        alert("Cliente eliminado correctamente");
+        document.getElementById("clienteIdEliminar").value = "";
+        location.reload();
+      } catch (error) {
+        console.error("Error al eliminar cliente:", error);
+        alert("No se pudo eliminar el cliente");
+      }
+    });
 
     // Buscador de clientes
     const buscadorClientes = document.getElementById("buscadorClientes");
@@ -137,5 +244,17 @@
     const observerVentas = new MutationObserver(actualizarContadores);
     observerVentas.observe(listaVentas, { childList: true });
   </script>
+
+  <!-- Modal de credenciales -->
+  <div id="modalCredenciales" style="display:none; position:fixed; top:0; left:0;  
+       width:100%; height:100%; background:rgba(0,0,0,0.5); text-align:center; padding-top:100px;">
+    <div style="background:#fff; padding:20px; border-radius:10px; display:inline-block;">
+      <h3>Confirmar eliminación</h3>
+      <input type="text" id="usuarioCheck" placeholder="Usuario"><br><br>
+      <input type="password" id="passwordCheck" placeholder="Contraseña"><br><br>
+      <button id="btnConfirmarEliminar">Confirmar</button>
+      <button onclick="document.getElementById('modalCredenciales').style.display='none'">Cancelar</button>
+    </div>
+  </div>
 </body>
 </html>
