--- a/clientes.html
+++ b/clientes.html
@@ -261,5 +261,13 @@
       <button onclick="document.getElementById('modalCredenciales').style.display='none'">Cancelar</button>
     </div>
   </div>
+  <!-- ⬇️ Bloque de imports y lógica -->
+  <script type="module">
+    import { db, getDocs, collection, deleteDoc, doc } from "./firebase.js";
+
+    // acá pegás toda tu lógica JS:
+    // mostrarTab, buscarParaEliminar, pedirCredenciales, listeners, etc.
+  </script>
+
 </body>
 </html>
