--- a/clientes.html
+++ b/clientes.html
@@ -220,6 +220,10 @@
         });
       }
     });
+    
+    // Exponer funciones al contexto global
+    window.mostrarTab = mostrarTab;
+    window.buscarParaEliminar = buscarParaEliminar;
   </script>
 </body>
 </html>
