--- a/clientes.html
+++ b/clientes.html
@@ -76,7 +76,7 @@
   <div class="tabs">
     <button onclick="mostrarTab('clientes')">Clientes</button>
     <button onclick="mostrarTab('ventas')">Ventas Cerradas</button>
-    <button onclick="mostrarTab('eliminar')">Eliminar Cliente/Venta</button>
+    <button onclick="mostrarTab('eliminar')">Eliminar Cliente</button>
   </div>
 
   <!-- Pestaña Eliminar -->
