--- a/clientes.html
+++ b/clientes.html
@@ -233,6 +233,29 @@ if (btnEliminarVenta) {
     document.getElementById("modalCredenciales").style.display = "block";
   });
 }
+// Buscador de clientes
+document.getElementById("buscadorClientes").addEventListener("input", () => {
+  const termino = document.getElementById("buscadorClientes").value.toLowerCase();
+  const lista = document.getElementById("listaClientes");
+  const items = lista.getElementsByTagName("li");
+
+  for (let i = 0; i < items.length; i++) {
+    const texto = items[i].textContent.toLowerCase();
+    items[i].style.display = texto.includes(termino) ? "" : "none";
+  }
+});
+
+// Buscador de ventas cerradas
+document.getElementById("buscadorVentas").addEventListener("input", () => {
+  const termino = document.getElementById("buscadorVentas").value.toLowerCase();
+  const lista = document.getElementById("listaVentasCerradas");
+  const items = lista.getElementsByTagName("li");
+
+  for (let i = 0; i < items.length; i++) {
+    const texto = items[i].textContent.toLowerCase();
+    items[i].style.display = texto.includes(termino) ? "" : "none";
+  }
+});
     });
     
     // Exponer funciones al contexto global
