--- a/stock.html
+++ b/stock.html
@@ -170,6 +170,13 @@ ul li p {
 <h3>Listado General (<span id="contadorProductos">0</span>)</h3>
 <ul id="listaStock"></ul>
 
+<h3>Productos creados</h3>
+<ul id="listaCreados"></ul>
+
+<h3>Productos reemplazados</h3>
+<ul id="listaReemplazados"></ul>
+
+
   <h3>Por Agotarse (≤2 unidades)</h3>
   <ul id="listaPorAgotarse"></ul>
 
@@ -179,7 +186,7 @@ ul li p {
   <h3>Errores en carga (<span id="contadorErrores">0</span>)</h3>
 
   <h3>Historial de cambios</h3>
-<ul id="listaHistorial"></ul>
+ <ul id="listaHistorial"></ul>
 
   <ul id="listaErrores"></ul>
 
