--- a/menu.html
+++ b/menu.html
@@ -101,6 +101,10 @@
         style="background-color:#e53935;">
   Administrador Glowzza
 </button>
+  <button onclick="location.href='scraper.html'" class="boton-grande">
+    Scraper
+  </button>
+
   </div>
 
   <button onclick="location.href='https://www.glowzza.com.ar'" class="boton-volver">
