--- a/menu.html
+++ b/menu.html
@@ -93,8 +93,7 @@
       Upload
     </button>
     </button>
-  <button onclick="location.href='scraper.html'" class="boton-grande">
-    Scraper
+<button onclick="location.href='scraperGlowzza/scraper.html'" class="boton-grande">    Scraper
   </button>
 
     <!-- 🔹 Nuevo botón Solicitudes -->
