--- a/scraperGlowzza/scraper.html
+++ b/scraperGlowzza/scraper.html
@@ -24,7 +24,7 @@
 
     function volverMenu() {
       // Cambiá "index.html" por la ruta real de tu menú
-      window.location.href = "menu.html";
+      window.location.href = "https://glowzza.com.ar/scraperGlowzza/menu.html";
     }
   </script>
 </body>
