--- a/scraperGlowzza/scraper.html
+++ b/scraperGlowzza/scraper.html
@@ -23,8 +23,8 @@
     }
 
     function volverMenu() {
-      // Cambiá "index.html" por la ruta real de tu menú
-      window.location.href = "https://glowzza.com.ar/menu.html";
+      // Redirige al menú dentro de tu proyecto Glowzza
+      window.location.href = "https://glowzza.com.ar/scraperGlowzza/menu.html";
     }
   </script>
 </body>
